Init new Vue CLI app, expand the app with vue2 app

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="home"></div>
     <div id="angularJS"></div>
     <div id="vue"></div>
+    <div id="vue2"></div>
+
 
 
     <!-- Jquery -->
@@ -19,6 +21,6 @@
     <!-- Materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <!-- connect to the single-spa config file -->
-    <script src="/dist/single-spa.config.js"></script>
+    <script defer src="/dist/single-spa.config.js"></script>
   </body>
 </html>
