Config vuejs app #549

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <!-- Materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <!-- connect to the single-spa config file -->
-    <script defer src="/dist/single-spa.config.js"></script>
+    <script src="/dist/single-spa.config.js" defer></script>
   </body>
 </html>
