--- a/src/vue2/spa/index.html
+++ b/src/vue2/spa/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="./src/main.js" defer></script>
   </body>
 </html>
