Webpack config for #549

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <!-- connect to the single-spa config file -->
-     <script src="./dist/single-spa.config.js"></script>
+     <script src="./dist/single-spa.config.js" defer></script>
   </head>
   <body>
     <div id="navBar"></div>
