--- a/src/vue/spa/index.html
+++ b/src/vue/spa/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="./src/main.js" defer></script>
+    <!-- <script src="./static/app.js"></script> -->
   </body>
 </html>
