Update vue-router and import the styling for components

--- a/src/vue/spa/index.html
+++ b/src/vue/spa/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>klink-vue-demo-spa</title>
+    <!-- <link rel="stylesheet" href="./static/app.css"> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: fonts.gstatic.com;"> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; default-src 'self' http://localhost:8081/"> -->
   </head>
   <body>
-    <div id="app"></div>
+    asdadsasdasddas
+    <div id="app">asdasdasdaskdasdklmadsmkadskmadsmkldasmkldaskmldsadaskm</div>
     <!-- built files will be auto injected -->
-    <!-- <script src="./static/app.js"></script> -->
   </body>
 </html>
