--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <!-- connect to the single-spa config file -->
-     <script src="./dist/single-spa.config.js" defer></script>
   </head>
   <body>
     <div id="navBar"></div>
@@ -19,6 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Materialize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-   
+     <!-- connect to the single-spa config file -->
+    <script src="/dist/single-spa.config.js" defer></script>
   </body>
 </html>
