Tweaking single spa config and testing loading app's from URL

--- a/src/vue/spa/index.html
+++ b/src/vue/spa/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <base href="/" />
     <title>klink-vue-demo-spa</title>
-    <!-- <link rel="stylesheet" href="./static/app.css"> -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: fonts.gstatic.com;"> -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; default-src 'self' http://localhost:8081/"> -->
   </head>
   <body>
-    asdadsasdasddas
-    <div id="app">asdasdasdaskdasdklmadsmkadskmadsmkldasmkldaskmldsadaskm</div>
+    <div id="app">daasdas</div>
     <!-- built files will be auto injected -->
+    <!-- <script src="/app.js"></script> -->
   </body>
 </html>
