--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="navBar"></div>
     <div id="home"></div>
     <div id="angularJS"></div>
+    <!-- <div id="app"></div> -->
     <div id="app"></div>
 
     <!-- Jquery -->
